# erd-tool

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE_SCOPE.md  OPERATE.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  WHERE_AM_I.md  architecture.md  context.md  new-project-onboard.md  product-definition.md  project-plan.md  pyproject.toml  result-review.md  sprint-plan.md
.agent-orch/: project.yaml  strict-lint-repair.playbook.yaml  validated-pairings.json
.github/: dependabot.yml  pull_request_template.md
code-reviews/: review-markdown-heading-validation-template-contract.md  review-markdown-heading-validation-template-contract.verdict.json  review-model-test-scaffold.md  review-model-test-scaffold.verdict.json  review-open-source-foundations.md  review-open-source-foundations.verdict.json  review-repair-governed-playbook-routing-gpt-55.md  review-repair-governed-playbook-routing-gpt-55.verdict.json  review-snowflake-metadata-fixture-strategy.md  review-snowflake-metadata-fixture-strategy.verdict.json  review-strict-lint-repair.md  review-strict-lint-repair.verdict.json  review-working-erd-application.md  review-working-erd-application.verdict.json
desktop/: .eslintignore  .gitignore  ERD_TOOL_PATCHES.md  README.md  THIRD_PARTY_NOTICES.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.electron.config.js
docs/: autonomous-delivery-retrospective.md  canonical-physical-model-v1-contract.md  delivery-implementation-contract.md  governed-deterministic-check-playbook-contract.md  overnight-delivery-plan.md  (+6 more)
(+86 files in other folders)
