[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "erd-tool"
version = "0.1.0"
description = "Canonical database modeling and Snowflake engineering tools"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Lee Harrington" }]
keywords = ["erd", "snowflake", "sqlite", "database", "data-modeling"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Database",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
erd-tool = "erd_tool.cli:main"

[project.urls]
Homepage = "https://github.com/leebase/erd-tool"
Issues = "https://github.com/leebase/erd-tool/issues"
Source = "https://github.com/leebase/erd-tool"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
